trunk/Archive2/31/294c419fae7190/output
main.cpp:5:1: error: 'map' in namespace 'std' does not name a type
 std::map <int, vector<pair<int, int>> > ::iterator it1 = Kcom2.begin();
 ^
main.cpp:6:5: error: 'map' in namespace 'std' does not name a type
     std::map<std::pair< int, int>, int> ::iterator it2 = PairSupp.begin();
     ^
main.cpp:7:2: error: 'map' in namespace 'std' does not name a type
  std::map< vector<pair<int, int> >, int> TotalSub;
  ^
main.cpp:11:2: error: expected unqualified-id before 'while'
  while (it1 != Kcom2.end())
  ^
